--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ pymongo = "*"
 pymssql = "*"
 cython = "*"
 risparser = {git = "https://github.com/MrTango/RISparser.git"}
+elsapy = {git = "https://github.com/jiaola/elsapy.git"}
 
 [requires]
 python_version = "3.7"
