--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-bonobo = {extras = ["docker"],version = "*"}
+bonobo = "*"
 python-dotenv = "*"
 pymongo = "*"
 pymssql = "*"
