Add keys manager to rotate keys

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
 
 [packages]
 bonobo = "*"
@@ -15,4 +16,4 @@ risparser = {git = "https://github.com/MrTango/RISparser.git"}
 elsapy = {git = "https://github.com/jiaola/elsapy.git"}
 
 [requires]
-python_version = "3.7
+python_version = "3.7"
