--- a/Pipfile
+++ b/Pipfile
@@ -8,12 +8,12 @@ pytest = "*"
 
 [packages]
 bonobo = "*"
-python-dotenv = "*"
 pymongo = "*"
 pymssql = "*"
 cython = "*"
 risparser = {git = "https://github.com/MrTango/RISparser.git"}
 elsapy = {git = "https://github.com/jiaola/elsapy.git"}
+pyyaml = "*"
 
 [requires]
 python_version = "3.7"
